# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
formats/: plain.py  stylish.py
gendiff/: __init__.py  cli.py  diff_tree.py  formats.py  formatter.py  generate_diff.py  pars_file.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: json_result
